--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #FAFAFA;
 }
 
 label {
@@ -11,4 +15,16 @@ label {
 
 span {
   font-size: 12px;
+}
+
+h1 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #6F6F6F
+}
+
+h4 {
+  font-size: 13px;
+  font-weight: 600;
+  color: #697488;
 }
