--- a/src/components/basket/basket.module.scss
+++ b/src/components/basket/basket.module.scss
@@ -27,14 +27,14 @@
     position: relative;
     z-index: 44;
     margin-top: 50px;
+    padding: 1%;
     &:before {
         content: '';
         position: absolute;
-        width:104%;
-        height: 101.5%;
+        width:100%;
+        height: 100%;
         background-color: #1EA4CE;
         border-radius: 2px;
-        left: -2%;
         z-index: 1;
     }
     .scrollable {
@@ -42,8 +42,8 @@
         border-radius: 2px;
         background-color: #fff;
         padding: 22px 22px 0 22px;
+        margin: 1%;
         max-height: none;
-        margin-top: 2%;
         .product {
                 display: flex;
                 justify-content: center;
